# testes_automatizados_python

./: .gitignore  README.md  Readme.md
ex_calculadora_teste/: README.md  pyproject.toml
ex_calculadora_teste/app/: calculadora.py  random_test.py  test_Operacoes.py.py  test_operacoes.py
ex_calculadora_teste/app/operations/: adicao.py  conftest.py  multiplicacao.py  raiz.py  subtracao.py  test_operacoes.py
ex_calculadora_teste/app/tests/: conftest.py  test_operacoes.py
formatador_de_log/app/: k.py  teste_rise.py
formatador_de_log/resources/: data.txt  lista.txt
primeiros_testes/: assert.py  hasattr.py  pyproject.toml  test_class.py  test_helloWorld.py  test_raise.py
reaprendendo_testes/: main.py
reaprendendo_testes/app/controller/: conta_controller.py
