[tool.poetry]
name = "ex-calculadora-teste"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.lrodrigues@sptech.school>"]
readme = "README.md"
packages = [{include = "ex_calculadora_teste"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
