[tool.poetry]
name = "primeiro-teste"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.lrodrigues@sptech.school>"]
readme = "README.md"
packages = [{include = "primeiro_teste"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
